[Multidevice] Add default-to-persist cookie logic in PWA installation

This CL adds logic to set a default-to-persist cookie that will force
the messages PWA to default to persisting the pairing. Also fixes issue
with PWA installing unexpectedly when disabling features.

Bug: 896057,900799
Change-Id: I77354ecbbccf69e1b9a97e1bcff82bccaeeb44b1
Reviewed-on: https://chromium-review.googlesource.com/c/1312305
Reviewed-by: Kyle Horimoto <khorimoto@chromium.org>
Reviewed-by: Jeremy Klein <jlklein@chromium.org>
Commit-Queue: Azeem Arshad <azeemarshad@chromium.org>
Cr-Commit-Position: refs/heads/master@{#606319}
Former-commit-id: 5a34aedfa81ccc128d16a34600f0003ae9f3a1a6