chrome/browser/chromeos/multidevice_setup/android_sms_app_helper_delegate_impl.cc
@@ -21,8 +21,22 @@
 #include "chromeos/components/proximity_auth/logging/logging.h"
 #include "components/content_settings/core/common/content_settings.h"
 #include "components/content_settings/core/common/content_settings_types.h"
+#include "content/public/browser/storage_partition.h"
 #include "extensions/common/constants.h"
 #include "ui/base/window_open_disposition.h"
+
+namespace {
+const char kDefaultToPersistCookieName[] = "default_to_persist";
+const char kDefaultToPersistCookieValue[] = "true";
+
+network::mojom::CookieManager* GetCookieManager(Profile* profile) {
+  content::StoragePartition* partition =
+      content::BrowserContext::GetStoragePartitionForSite(
+          profile, chromeos::android_sms::GetAndroidMessagesURL());
+  return partition->GetCookieManagerForBrowserProcess();
+}
+
+}  // namespace
 
 namespace chromeos {
 
@@ -35,19 +49,45 @@ AndroidSmsAppHelperDelegateImpl::AndroidSmsAppHelperDelegateImpl(
       profile_(profile),
       host_content_settings_map_(
           HostContentSettingsMapFactory::GetForProfile(profile)),
+      cookie_manager_(GetCookieManager(profile)),
       weak_ptr_factory_(this) {}
 
 AndroidSmsAppHelperDelegateImpl::AndroidSmsAppHelperDelegateImpl(
     web_app::PendingAppManager* pending_app_manager,
-    HostContentSettingsMap* host_content_settings_map)
+    HostContentSettingsMap* host_content_settings_map,
+    network::mojom::CookieManager* cookie_manager)
     : pending_app_manager_(pending_app_manager),
       host_content_settings_map_(host_content_settings_map),
+      cookie_manager_(cookie_manager),
       weak_ptr_factory_(this) {}
 
 AndroidSmsAppHelperDelegateImpl::~AndroidSmsAppHelperDelegateImpl() = default;
 
-void AndroidSmsAppHelperDelegateImpl::InstallAndroidSmsApp(
+void AndroidSmsAppHelperDelegateImpl::SetUpAndroidSmsApp(
     bool launch_on_install) {
+  PA_LOG(INFO) << "Setting DefaultToPersist Cookie";
+  cookie_manager_->SetCanonicalCookie(
+      *net::CanonicalCookie::CreateSanitizedCookie(
+          chromeos::android_sms::GetAndroidMessagesURL(),
+          kDefaultToPersistCookieName, kDefaultToPersistCookieValue,
+          std::string() /* domain */, std::string() /* path */,
+          base::Time::Now() /* creation_time */,
+          base::Time() /* expiration_time */,
+          base::Time::Now() /* last_access_time */, true /* secure */,
+          false /* http_only */, net::CookieSameSite::STRICT_MODE,
+          net::COOKIE_PRIORITY_DEFAULT),
+      true /* secure_source */, false /* modify_http_only */,
+      base::BindOnce(&AndroidSmsAppHelperDelegateImpl::
+                         OnSetDefaultToPersistCookieForInstall,
+                     weak_ptr_factory_.GetWeakPtr(), launch_on_install));
+}
+
+void AndroidSmsAppHelperDelegateImpl::OnSetDefaultToPersistCookieForInstall(
+    bool launch_on_install,
+    bool set_cookie_success) {
+  if (!set_cookie_success)
+    PA_LOG(WARNING) << "Failed to set default to persist cookie";
+
   // TODO(crbug.com/874605): Consider retries and error handling here. This call
   // can easily fail.
   pending_app_manager_->Install(
@@ -63,17 +103,17 @@ void AndroidSmsAppHelperDelegateImpl::InstallAndroidSmsApp(
                      weak_ptr_factory_.GetWeakPtr(), launch_on_install));
 }
 
-void AndroidSmsAppHelperDelegateImpl::InstallAndroidSmsApp() {
-  InstallAndroidSmsApp(false /* launch_on_install */);
+void AndroidSmsAppHelperDelegateImpl::SetUpAndroidSmsApp() {
+  SetUpAndroidSmsApp(false /* launch_on_install */);
 }
 
-void AndroidSmsAppHelperDelegateImpl::InstallAndLaunchAndroidSmsApp() {
+void AndroidSmsAppHelperDelegateImpl::SetUpAndLaunchAndroidSmsApp() {
   const extensions::Extension* android_sms_pwa =
       extensions::util::GetInstalledPwaForUrl(
           profile_, chromeos::android_sms::GetAndroidMessagesURL());
   if (!android_sms_pwa) {
     PA_LOG(VERBOSE) << "No Messages app found. Installing it.";
-    InstallAndroidSmsApp(true /* launch_on_install */);
+    SetUpAndroidSmsApp(true /* launch_on_install */);
     return;
   }
 
@@ -116,6 +156,15 @@ void AndroidSmsAppHelperDelegateImpl::OnAppInstalled(
     PA_LOG(WARNING) << "Messages app failed to install! URL: " << app_url
                     << ", InstallResultCode: " << static_cast<int>(code);
   }
+}
+
+void AndroidSmsAppHelperDelegateImpl::TearDownAndroidSmsApp() {
+  PA_LOG(INFO) << "Clearing DefaultToPersist Cookie";
+  network::mojom::CookieDeletionFilterPtr filter(
+      network::mojom::CookieDeletionFilter::New());
+  filter->url = chromeos::android_sms::GetAndroidMessagesURL();
+  filter->cookie_name = kDefaultToPersistCookieName;
+  cookie_manager_->DeleteCookies(std::move(filter), base::DoNothing());
 }
 
 }  // namespace multidevice_setup
