chromeos/services/multidevice_setup/public/cpp/android_sms_app_helper_delegate.h
@@ -5,6 +5,7 @@
 #ifndef CHROMEOS_SERVICES_MULTIDEVICE_SETUP_PUBLIC_CPP_ANDROID_SMS_APP_HELPER_DELEGATE_H_
 #define CHROMEOS_SERVICES_MULTIDEVICE_SETUP_PUBLIC_CPP_ANDROID_SMS_APP_HELPER_DELEGATE_H_
 
+#include "base/callback.h"
 #include "base/macros.h"
 
 namespace chromeos {
@@ -15,12 +16,15 @@ class AndroidSmsAppHelperDelegate {
  public:
   virtual ~AndroidSmsAppHelperDelegate() = default;
 
-  // Installs the Messages for Web PWA. Handles retries and errors internally.
-  virtual void InstallAndroidSmsApp() = 0;
-  // Tries to install the Messages for Web PWA (if needed) and then launches it
+  // Sets up the Messages for Web PWA. Handles retries and errors internally.
+  virtual void SetUpAndroidSmsApp() = 0;
+  // Attempts to setup the Messages for Web PWA (if needed) and then launches it
   // if the installation succeeds. If installation fails, retries will continue,
   // but the app will not be launched if the first installation attempt failed.
-  virtual void InstallAndLaunchAndroidSmsApp() = 0;
+  virtual void SetUpAndLaunchAndroidSmsApp() = 0;
+  // Cleans up previously setup Messages for Web PWA. This does not uninstall
+  // the PWA but only clears state that was setup for the PWA.
+  virtual void TearDownAndroidSmsApp() = 0;
 
  protected:
   AndroidSmsAppHelperDelegate() = default;
